# ai-analytics-automation-platform

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  dockerfile  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 1cdb074be8d4_create_initial_schema.py
backend/app/: dependencies.py  main.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/integrations/: llm_client.py  storage_client.py
backend/app/models/: __init__.py  ai_generated_summary.py  analytics_result.py  chart_recommendation.py  dataset.py  forecast_result.py  processing_job.py  report.py  uploaded_file.py  user.py
backend/app/repositories/: dataset_repository.py  job_repository.py  report_repository.py  result_repository.py  uploaded_file_repository.py  user_repository.py
backend/app/routers/: analytics.py  auth.py  datasets.py  forecasts.py  health.py  jobs.py  reports.py  users.py
backend/app/schemas/: analytics.py  auth.py  dataset.py  forecast.py  job.py  report.py  summary.py  user.py
backend/app/services/: auth_service.py  dashboard_service.py  dataset_service.py  job_service.py  report_service.py  upload_service.py
backend/app/tasks/: analytics_tasks.py  celery_app.py  cleanup_tasks.py
backend/app/utils/: dataframe_loader.py  file_validation.py  json_encoder.py  pagination.py
backend/tests/: conftest.py  test_health.py  test_root.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
(+33 files in other folders)
