[project]
name = "ai-analytics-platform-backend"
version = "0.1.0"
description = "Backend API for the AI Analytics Automation Platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "alembic",
  "psycopg[binary]",
  "pydantic",
  "pydantic-settings",
  "python-jose",
  "passlib[bcrypt]",
  "bcrypt==4.0.1",
  "python-multipart",
  "email-validator",
  "celery",
  "redis",
  "pandas",
  "numpy",
  "scikit-learn",
  "openpyxl",
  "httpx",
  "pytest",
  "pytest-asyncio",
  "ruff"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]